Cleanup with a variety of small changes